change cloudflare token

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,40 +1,40 @@
-#ENC[AES256_GCM,data:IdaDqT11gUbNzp1Uyzmlz6DQ912+z9tsAc1bhTXhX/h4BZ2SteZWsVWFGm2YKsGl00TY7sJP8tzyLf5uHcBNl7A=,iv:n+qmz35+Rhlnqg2AMn4pyoEtfuyoEe7w6Org3CZ8+dM=,tag:FgzzpaZN0Ln25E8Ytq+q0A==,type:comment]
-#ENC[AES256_GCM,data:qT0JX5HkQfgYFk5DphQ4AFDcPMTV1lb4UfzCWONO93q0CERGUilMRugLurQ=,iv:NybMSdVrrbKgaB/igzbgs+IMP5XlSCl6j3vHaxheSsA=,tag:uJhRYAFQ5S+Jh6GabxUNVg==,type:comment]
-VIP: ENC[AES256_GCM,data:WiH6NXBK+bhriO0Scw==,iv:L9Kcu/BBk0wXe0ngS8mbaFwGcRy2Zvqxmix4CRO0Pp0=,tag:yb5JfDm/bajt1uhPLL14mA==,type:str]
-#ENC[AES256_GCM,data:FpblpHuXT7a2X+CumZdEtH8jURIemEf+l1Ld,iv:1pwCZAwQl1WZAWnBk5s/Iy1CE3F+V/RZVC2LeUFwIPQ=,tag:T5RkACWZ8YFrwVglTDPHGA==,type:comment]
-#ENC[AES256_GCM,data:H9ij1iiAXy+CGncRKb0gnofAEKw2zZkWabA695UsdzrR/auYoSgxjIVPJ0tPlKa52CmKUcvGYX2Rrprzs1Jt5a1KRkMm+tyCDrieNBGENbfHWNnrg7wuY8E=,iv:Jbw1yJSF2aFGowF/jUH1IRYNC8zakGQBVv+IOj1wPco=,tag:TC5VygDet1+HdTid6R/HDQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:jiOD4HZSqQYY5JFRwtM=,iv:kQcIStclYSJ6iv8ejKXq/UCOPyz2BTm2sS/VtHe5vAk=,tag:6sIiVJdFlXTbkNVVhgtHDg==,type:str]
-#ENC[AES256_GCM,data:K34v0nidBRL0IeSS2+gkyPzXG1OvLgloQvhK4/peLI/Inw==,iv:ridawoXE7NPKCLrc+yoVlfbegrSLb7autuBdsotFK9Q=,tag:myhmZXnFPwe9tNj5On+nMA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:lEgcV8dEiZTb2psYbg==,iv:c7VQtGsPckz9IenuKIhoN2kQkKMA/TL+ailG5V3OFYk=,tag:SdRbbip6SV5GcYYwy+KdUw==,type:str]
-#ENC[AES256_GCM,data:yQ6jNOsANl7a+0CUPnAIaJ9iyYSPZEPhL0g9h0wgvO20houpujXnTq14ZOodJqM=,iv:80Ru7zxGydwEI/DCjYrhK2g4inn+majth1L0zmFg68g=,tag:Jo4/4OC7tQzdZ1mLdVnswQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:NJHvo+lK8qL3gLTAdgCEhOhPucb55qBuxwZV0gC2jA==,iv:GJqpDu0rRhWHUKHMnimh1HQwMMhlVBd76R1gSoLcGP0=,tag:ZkXz1V8D8RbjPmgQ7WlpGw==,type:str]
-#ENC[AES256_GCM,data:B5T5BhyOGOd44k2LOcX9geYnHJiHdCnu4KMcCJx+6ApITtnyaslKarPrfHA4zP5AQU+cDDoACoTTHJQy8a6QSEjl4YUH54BzN+GvKG7Q46Yo9g==,iv:+DVbUfuuM3MDOnBlVeeRUwgZNKKfCNlaEKfSLWaQxws=,tag:P8NGpP6z5I9LCQycgR/oPg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:m0hUyBOWgot8TuQpZUkS,iv:Kp9xoHzrNsRB2H3VLtmYYoImSIER0I4/JQSMCIkGE9M=,tag:CUw9xEti3hiQ86WMamFPgA==,type:str]
-#ENC[AES256_GCM,data:16om65H6jLRSzz6MqPT4ZZRR79joiBEDkuNljqJAGAnN,iv:BWVXafzIXNXmYa5AJGB4dXU7iIAK6N3+E0oMh022DPE=,tag:X32QdIJsYogbmzyMGCCztQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:hZemfMiJxAfFFRghfuDz,iv:c698FaW32YGVBiTH9niHYYXdB3Ug/qke+CdwLYO/Id8=,tag:SF7xkjNoNNqauT8y3yDBnQ==,type:str]
-#ENC[AES256_GCM,data:UZonvCpsccPa8WthRsfy50bgfDVru8sWksxgxAh2ECn02kH7W6npjWDE2RNBA8WJc/0z4AbjZ1bNIejC0aJtJ2lWgwmBhErXS0k4fjUceqI=,iv:PSJLmzAybG7fMNswwg5VJVyMpeKI6KFXGuoN6DL/QFQ=,tag:n9Or+PRFPTDOFs23+S7rxA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:ove68PV2HJ65BxM604hG,iv:zQugt4A2cf+WxGJdMkpe4tUnJd5sphpNbeJTMLngjsM=,tag:Y1zuahEpG6CYAGONAfKEQg==,type:str]
-#ENC[AES256_GCM,data:AVmd4cHFQmYdNP4l5u9qKvUdSVfhUo098BM0mUVlf/r76l4pK3P9jfxDhpAOQBAqdwC+C4EXSgyGBzDSPZhz9jhyeeOMi7elO6p+9MGWXaCXyqz7TT2h,iv:ck3+ZHiem94zjZmUs+U54A0Tb9mZfFb83EETbutOO7M=,tag:zpeYVNxemW/Y9Q1oIqRaKA==,type:comment]
-#ENC[AES256_GCM,data:bBWmIS3BT9RKtkekO83vnN/ehyAXakE8wgU/ngkoQTtGI3SgCoW/0zD91EWqFWlWnyc0Xx/npq+uoym9VbCgOt9tHmuIy5TTEKYTIM12fXJ2m6mqDiVXN95UZdG4OozjyMczB71IeVV0gTl18H2Zx/zvQXCD7+Yomq5rxw==,iv:Gkr/e41reUAy0/LHdHbEKHdleZk3Kvd8vm24zGKtgNM=,tag:WhzccivtnW0HOrrRNwQ5og==,type:comment]
-#ENC[AES256_GCM,data:eOsg6VKT/3tFhq2Z1gXQsOyKXxpyW9KmN7wmhZgsUJ5kj/WdrH9aZ7yFPIw9AZV65mjuN6DSJGukydGzi44F4UV6n8HUHT24/1RxwSoHoc4=,iv:obqik4aDOYkuj4tvSJ7xTSQl8aXu9Jv6SrRVpHDv9oY=,tag:ygbQMWQ0U3TNddgU1cAs7g==,type:comment]
-#ENC[AES256_GCM,data:Ppy3LdpnRaMNqtLBzjUfaINby3BDhDMVvc5SXnjfKjYVRi9vlBCZwtt7g1wn5ilSMU/e5Dbi,iv:Rh+VEUrx3VJ/8d1Dk/HwWnXLv9+S3PzGbliDQJpVa2s=,tag:8jpzuFw1thFTB3hA24VD7w==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:qDu4het0USrWWTapwJ0=,iv:LoE3yfdf5HQQDykgKljtePuiFYQM/DVzPbcnCH8TZRA=,tag:x+zHVTwAKdWtY6IE9oOIqA==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:83Xi/nBPoJPzhYXp,iv:+PxZk039Kk0NHhSPdQbmnEQxv6eu/VANd8dGhcPl3nQ=,tag:1Di3MKYu2tWeUIoOYw1HEw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:65HSs5Ah/6ZoXhIKyEA3dnQ=,iv:qdpEOVmQRi9tLMhi3WLfcraGSyceGymHHCutJQiztaA=,tag:jz9na2oKQjCYPJgDfnId6A==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:Y8HLQgRiFEkRWL2gE+NROGUtvb0KbQmGeUaP6Xj0lQs=,iv:6Y4lt0JcqTVmTk8bxrvxq+YWwIQ9MFyhWtQF227NyE8=,tag:jyNPtqZb4MaUCnd7xlSrbw==,type:str]
-#ENC[AES256_GCM,data:/TSYu8NdVW6hb35WIbvxLtcsW8GQpYU3M9xDNwz2Vn7B7UznpXDXGhSTO0Yoevkw6LwGJD+5h0c1lpgO7Ed+B6JbyA==,iv:wiTQGenb8Y8CW3tjjV34ezeBQX0+3KKsmVMztDHs14Q=,tag:kUe3oygP9kMkOPZjJyeTHA==,type:comment]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:aZ5fz93UHsgssaP6AR33Wu8r5wVeu3RUZghtN9LByNK7B4k+qQ==,iv:mFHEh6ZCA8w+xMExmaSSiZ8tx31ctfBa7U99u+cyKj4=,tag:Ml2rbegOFKv+Kwv9+VBfyw==,type:str]
-#ENC[AES256_GCM,data:L6wTL1mVoZvEVqdvKnE14pm4AMKQjIQuXCLhOPUKdXfKmeIbcVZkLaApM/JpPDd2yH35KzkJyPs=,iv:QFx52Q3l2JoRnCaK5kAFZC8EgPvyToDwShCawLV3R4g=,tag:mw4ewm2z4ASj3AOqabXfIA==,type:comment]
-#ENC[AES256_GCM,data:Rpf1sAx/Imi1XbZ4shELTqpaJf+OcmWShg==,iv:7s546UZYVLm2pku6xYANRcY12PYxeYLSL6lByVWKWzs=,tag:jTWph6FSqTQvNJWcFf9pag==,type:comment]
-#ENC[AES256_GCM,data:9yWIpCRN/BJG+BcUXQSF6f8qNRXJycuMr8b2oPrh02d9uKNzsBHGnXYM1kDEkqircMzDCl2XkfcjsvpoJbM20W7wUUhDDakGfPi5P0I=,iv:egxoZDSeei1ZM7sV0KQZMjU46gVKTVNVLVgFSzK4JnQ=,tag:O+zuJ/3zJelLyyeIDGipGg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:/oWFG+CwYIjN9j5zZhd0OXt8/jTihbI24GNHCt77lKxOtFV4W1cmgkNKQGtXy+RC,iv:f1Ads//Y/LTaYh0qzlKdBpV0mHDhHPP2HUmSzmq142g=,tag:JeI9G8GAAGO8p8dGsp2/tA==,type:str]
-#ENC[AES256_GCM,data:zON4VJKk09clLOOJ0/3AFkec2DsQbCg3FwC1Espv7Hvs1kyK+snPQDJRTHCkCbnYles+7YnZnd04Gwx88NRHemkuvjU4als=,iv:6FFYMM51Ts8BOhg+UD6gM3zMylh/oKkXK0oEac8RcAk=,tag:YEYIKQJFHrYOpswedT/RJg==,type:comment]
-#ENC[AES256_GCM,data:yQ0p+dtum5qsv1xE44BaxAgJOK4aMaiai0GEViJBOBihgoPRMIox08Dsn14oIGsz5aUocpAz,iv:veceQCACX3jWQgqDKs6gOLV7sV/9hbAU0d9+GtpuBYU=,tag:1DDifG6l6T9H+dTpSYTP7w==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:FjQE5HdfFQ==,iv:Ola1zWQPso+b4g/tGmnfe8N7El/FwtHb7727FcV/NeA=,tag:h9WV2RYQLZmlmdBT85V2ow==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:k9Ud+zTem9utHu3D2hyt3gqgJZo=,iv:Yne2q/o2dTIUnvUHgReoEchPqXUMi6R2w+UpCKZhQHg=,tag:44BrAyFdotnGmgGP9T/WNw==,type:str]
-#ENC[AES256_GCM,data:4PE6q9KFbv2q54iYkjM=,iv:m3iW4dQPxSCE01OyWUhkeElhBwlonujX8mNU0Z16854=,tag:FkJCzn0Gy0/3S0bmIK8q5Q==,type:comment]
-PODNET: ENC[AES256_GCM,data:IxCejWafQ6BJfeTgPA==,iv:xFO9LG9UWHFJM6Ko4ldHA2V2iq6ntt3ERjIXZNTTIDA=,tag:T/dxsh4xaxOtif3BylGqLQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:qUAQzvsnjGfIuauiMg==,iv:N7inDUX7gvJY0ZYPbGrqbtPVLv4Hq6bitvLt/fd2WgU=,tag:ffAqyq2WQcHgnx9E/7enXw==,type:str]
+#ENC[AES256_GCM,data:z/yDAbg2N5/sCPQCPXhH1Ah0ac44U1bVXO2slukSBdJPCovjvPNCamqqMYFzIqwES+3LtuO+RI8oOcMo9F7g5EM=,iv:X8dJWjR/e6nEJdj1DJsLgkRbdrjW9eEORuvMjqBx2W8=,tag:RY98+2VPDJZ5z/jLQZIhzA==,type:comment]
+#ENC[AES256_GCM,data:I0JKDyHqu4ebmVATw2d5mawAeMBioTF8IGskr6bXTZ7aycdgSB/BKbkCKuI=,iv:jvVR4hkLF1iiRDaocuC9BYD4vPFtZiH43+yHCnIZxjQ=,tag:vV9RS6KUk4+cfztfcA3NbA==,type:comment]
+VIP: ENC[AES256_GCM,data:8/+3nj6T9cASkXratA==,iv:dMGaIsu5/84TsmLMgny0SbbbuEZT8GGNFviIB8pvrTY=,tag:ddttSfNPMf3Wj8w9dRup4w==,type:str]
+#ENC[AES256_GCM,data:gsmGoZ1RMCbH+RWn35E47Wkro6/OXEmD0D5l,iv:SfwSzrCGVbLCMNk7Kg/YAV7t9pQ6WNSDdMPS2FPmBR4=,tag:5Rm3nRttPqAWbMwkbzvV2Q==,type:comment]
+#ENC[AES256_GCM,data:jOIksDjDETp1APhpGJPobMGMVDgTUl1A1WvCW05PpC7DzJKYgMMgQRUeuZTdA/ZjNRvy5eZY5fmaaTPqILqdYIycMnUEUsfGqnFAGi9O60fg/gCVBl/nbRo=,iv:dRyuzmaAytrraGACSwKTbVJ7OJOLdoWKg0QazQDUF9c=,tag:Bv71tq5vNeBEVNPUefErlQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:oP7nqpeICQ1sU/PtF3s=,iv:n99RTCPoLOZpmsy5nkHPkwLhUwx0YGikOoG15AUNRro=,tag:FhxKYDWmn+NbHdxkO8HvXw==,type:str]
+#ENC[AES256_GCM,data:RlQ8ikkbAJcPjIsSMoSRUGvG+r16Eq2A+DgJCubi1mVmHQ==,iv:P4B+syuVbMKRtC8LjNVFtEyifDW6j6tX77WbQQdxj5Q=,tag:X0V6adoVNjPH3y34bNVqYw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:fhCTA7/1mLbw7tU4mw==,iv:09uJ5OmVQeoCggd1QVDcaS81Jg1DdnhsqsWmnnXKEWM=,tag:itTHhooldbHedNpH05jr3w==,type:str]
+#ENC[AES256_GCM,data:p52JEsA27Kl1p3dcaQvApqH7by3KhzblD3ixKZzkkpI3JKA/NsnF9WJdZ4lSn/g=,iv:tRaZrcxsXNGEdKfQBp8R7odpHGm1TndeZsUlIEUX94k=,tag:ZrmRtC0LiXTW/o9mHAxmAA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:Jg+91giOjIEKM8kHD6O4FdjaEjhVmmcZ10Sjv9DwiA==,iv:P/Ao5QRdEwM2H4Gz3YSUx9ZFlP3py/ksJln9JSz5mzc=,tag:D+orUaAhCtxFsJljTAmr8w==,type:str]
+#ENC[AES256_GCM,data:4vf5u0UGqTiEyTfuxv+CX1IU/Xq/nQ14F0UdjQUe9VyTdDGqctB4WF1W06xGhKeiFKPQvoVJGaORYzwkVGy5/Q5tRVVwjsFgRqinWoDUux6fmA==,iv:2G5g/gCLgkD0AzbfpPH3SXsjqpre0GPr2nE3IcTf0zI=,tag:9nvUZNFQEp4AFWxE0jxOyA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:faW3jOUwAJ8coHsf52tj,iv:ndjUygZUzI39xBO9pq3RJhzmMWzDDMVHj1pv6avX+9Y=,tag:/8l9bf4gUDTxZKJQCQ84yw==,type:str]
+#ENC[AES256_GCM,data:OWAqM9+B4rcnk4GFnL8p9SIW0zzz7+sfpgm4wTUOO487,iv:vd7+WSpovP8OXQDRWxZrAi4aLVpZ/F66jx5/elpcSug=,tag:r0++WFXdqDoo3CA7dYYbkQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:SSDJtxS5V0Dr9sFr19ey,iv:Ymrs+F0PBnLDPa7+GOz3pUJAllTJdeLEppBRHWykD4E=,tag:TpOlwTn6/Lj6oYDL2DOzAw==,type:str]
+#ENC[AES256_GCM,data:Fr+fKB+A9xPHSFCsXqLlWtDyBfDAqiQkY777xyC67PH3E689Zwzog+FePE4/6k6eug8Di+hQS3raCTUHrCEKJS0newMxRTXf1Ll7/n9QrNA=,iv:x7ks8K5Sx8MmjKd+LPZ2RTaMEHdcCzSlzoqaYRRbuoE=,tag:yvXIndRY6RYlDNxYexYiGA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:mKkM0HG4TPZRKz8zzBOR,iv:dMuchzil5hqb4SKnlULgVDLmUdBA45pIlvA1qO2q3PQ=,tag:AVLKXjTKRXaGTMMKCVqlJg==,type:str]
+#ENC[AES256_GCM,data:0CRls2CLN7i0Ui00jRZhTwCeOZ3768pO4PG5CA2exRLauNa4KHReuKirk83hkdGvrxadJipvp69wGyXmluJvr+XzozN/6AMy8nL3jvXsT+XsNhkkm6uG,iv:wZ/FZWTMOofbJPnlt6fTH2knqzRlPJu8s290aW1A1fQ=,tag:JtUycgyvQ3dh+CDvfemGWQ==,type:comment]
+#ENC[AES256_GCM,data:CmKPhdHA5NBFj+QHCMrW+J8k9lKOGPutWdDJOqAQk+8/sDYeDj5DMHfRKimcMi67IpFlqT0taZJayNu4wje2PKFSvXm19g//stM7acHZglvhGkTDlCPpyZt65rJHZlMoaHsZqYbK6n9YQALSUOnkSRep06pQEOSPKqlncg==,iv:DJ7qVgqngjiIN3HLMpzWem9W+e2bIvQPbHak4O/0Bis=,tag:aO1VOvCmAG/wNfVyG/86Rw==,type:comment]
+#ENC[AES256_GCM,data:ytYY/qzGcLYySM/ATk//yYw9JRec7Ye3bZ3NsxMaPvZ1wYvvDiAZp3unBsVA9FnzxMdGH1tNyaPAduWQa8ueHIDxG26NCob8mWenRkmUpCU=,iv:xPF3vh7t/fQrXw+72IQaQGG153mUN1SuiXu9+MGlpEc=,tag:8QjuB40anympVSTl+HZExg==,type:comment]
+#ENC[AES256_GCM,data:Pa8EE0eg0fbLQRyFxu9ECPnrPG38oVAu81zc+C5yFJKRlgXokKxR1N+0qslNYx5Wx+8YUeij,iv:zRYgAxawb7ZZhlemXmrCMTy8Zf4WXS8D1lb0fuke4x8=,tag:mVvoBRCsVjKUcZwtYxItNw==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:pDXrZuKapkcwOVNm8Ac=,iv:rN3ObctkzPWIEuOBqQjrx3Zj5z2SoRLHoCEwvr800QU=,tag:P9XxRJL5+QXdLTl2hCqr9A==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:8Dpo/j52AzEzhLXw,iv:vP5b3rJVtvQZk3gSWV+8ciINq5uyOxq2H0QPLDsWL+Y=,tag:d53ZY7RydcPQBxMjIQe9PQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:wpU87whfBi4ijHCFLWcMoyY=,iv:0kEnogbZNlEhJOGa2cqvPBlHqEbfuEcq0WvsazLGq8c=,tag:e8yIRqAIHHDRtikxqBXOpg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:ezIbYIWdvgJmSIxvf3ltbuPwVyMHjj81CYmOlqreiQE=,iv:+QYKD5vK8Ee2qLNPySVBfGTvyy+de2jzScocSy5XtQg=,tag:cANLWNUP4/ZiyD6sO2sXBg==,type:str]
+#ENC[AES256_GCM,data:gcoFzwmA1B6P9kElvOt5nECDl3IFBNrOLqrSDy+e//x61oxscotG1lVJHf0V8lFzXCsbt5dKvTlcv/FF14mOFsqt4g==,iv:ixMLyYk+M4rAILUU0CJLRID8a+wG9HsAlagImzxJ/ds=,tag:0ifPMbj8LGnAYNYAsHvYSw==,type:comment]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ksfzz18vTUWRy0skSCr2se2XrNdbY51sGjPlrr2kGx5MhfQV3g==,iv:epUqIg0uHACMYs7tjICbp7PQxCLxWAJvQxmAMdE6zf0=,tag:3rOtLIcoBnw4m2Fz+jmnmw==,type:str]
+#ENC[AES256_GCM,data:qhnAkX1JR5+CpcFz4PxqheyMjNl/fmcj97ixFAqZaCOP0Gc5fR3/DhSLR71GQe7/+fiDgTpPr0Q=,iv:TFxdeaN48ouHTydfp3T/22Imv0N5yjD+i7Dsx/83cMM=,tag:dkeUsD/0KoxX5zhFLdivsg==,type:comment]
+#ENC[AES256_GCM,data:QV31fArSCqfseLxUlo8cILMtX4UXB8xV4Q==,iv:jxBzo35UamPXa8Wtya6whCJxCQv45aeu0gim4tJIT7s=,tag:FswwnCjCMv3MDUJAwMnGlg==,type:comment]
+#ENC[AES256_GCM,data:WGu/YGAaiJ9qd2Z2KQWWBgAHIeGu1Ytd+6qC/IYqsK+zFyvZWA7YEb6LVFmC/NW/pgFn2jXdhjJhBeM+t4GGnRefJjzEGVir3CZqCzY=,iv:MuSGEqJw9QXa6DrTOLhX0pRqTawiMogr4fjM1m6jsIo=,tag:jxJrTm5rEqhCdvIELUVN0Q==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:/w3Qs1UTxZQ3KTRciR/4J5wfjl+vnQVeLaboPEaBBe2XiPWG0qOWmr5zq7z1blmR,iv:sV36ZRXnBJGVs11bbFX320MzwBzl1RBBQ/0mllj1/AE=,tag:HjhuLk9895pna28/gaFqLA==,type:str]
+#ENC[AES256_GCM,data:NsdqyNE5py5a5XQznComOhQt/QiITESqCGPG/FEkxvKck9Ni3HOiOSP/FjZi1hnoppA79kyc0rWvB90dZl/2xFiJu8c1tE8=,iv:gY8tn/VFO8iK/KjJgMes0I/yIyjzCzLpVHZrygKAuPA=,tag:L+s0+IDPcKcVDJlFjfJ+Jg==,type:comment]
+#ENC[AES256_GCM,data:nDpir95jom6l9Ktz1rMBOvS5LC4tBpPdLIgoBhdvseU9uiIgHjRiO5tdThrplusAezHFR0oB,iv:yALiCUq+4PbbEt9uSIqEoxTaa1y2fr+OQH4HKuY58yc=,tag:1ps1w5LIBZ0fEaBVZqkXLA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:F4fkRr4lzQ==,iv:HgHj9WVW/wejKe1u9+rMuM2QTPAr1u4ZBg9hcFSbcw0=,tag:CVawD2i1RjW1Xb4AYRT+RA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:qFNMdQpt0GEMSrtaX+nnl7ENHLw=,iv:TayRt5Co/3SeyhBZsEWSjLvf03N+/PlyfL8cggNQnbc=,tag:YOfLLogxksRoqrAaY2ijWA==,type:str]
+#ENC[AES256_GCM,data:v3VhFG7pfG/ZqrL45LQ=,iv:ayZSevbtUsksXt5SIDgPB8jQkCmXqYEVCrJxV6LxcCM=,tag:/ye/kg0+y/gyYisH6x+Ypg==,type:comment]
+PODNET: ENC[AES256_GCM,data:Hqvtg1U/IopSmTBlLg==,iv:Wo3StqpE603v1CslKkmuI/wWUMZa/ZKIFlwSasumBmE=,tag:50CWY5jfJNfEMaNYRU5W2Q==,type:str]
+SVCNET: ENC[AES256_GCM,data:ThlUZ2c/f2xeSMD1Zw==,iv:vxIXIGO7X8sign4UH6aH0aMeOOMWNnBcXUmvEhJeUaM=,tag:JL6TPStOlOGW06FPJD4peQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -45,13 +45,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvRnZkMFJJcXhvVmpQV3Zk
-            N3pRaC9oTnhJREZkRHpSL09mb1ZFQTJubVdVCnFMVDJHaWdJWGNhNVVqdjNLOXlR
-            SGJVaUU1dGs0eHRoQnRnNDdvd0lVbjAKLS0tIFRVZXJvbGNZWHd2ZUVsNXVyU0xK
-            dUhWZXVNL29nbnVwbDhRYmtZaGVkZUkKaeb9GYpi0BbVDoqkDlGGMC+SmQDnoUg1
-            NyEiDdG/j2tyNnewcy9f3Qu1OEu+4bogr2P8YZ9ZSW/QtJczxj7faw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaWnZvdks1MTVSMVhmQlFk
+            WnkyUlc3SzhRT0N2VTBZanhYR1ZtY21WNTJNCkxHK2lyc0kxVWhkY2pOUHNqQ3FV
+            Y3JGWStOTmlXeFh2RS9JaUoyUzVZM0kKLS0tIHBrT0pBcmdJM3R2S0ZTWEJrdTNQ
+            a0E0VUNQUG9Zd01pelZ4bUhXMnh4SncKbEiqKnh7an1fq1jAZ+5tXWmttfsGXAO8
+            zTuC+IjYvG0+q+jPU2JAt1fcW0Px0WDS+CzyQjDsBxqTuxsg0sfjzg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:39:26Z"
-    mac: ENC[AES256_GCM,data:WKblZK9vi/o3HKV9pN+A6IP/sllVky/DdgBodM5HiMCcSaL51RbBQ97Viv8ZcUaGEevv22O2oZJlJokCJv2hJ7XS6bnjO0qnP+gH+n7IUFPng0Tszoh+6aUv47zVNUJGXqQRGEr/53VGgrgS2TMBy5ybV78ozTif9cOGGJlKdtU=,iv:QuGkHGpL/GLhtm0dphB7MMHj3vTLROuj197av4/8fR0=,tag:Q4dAh6gEHmr4OCg3EKqlUA==,type:str]
+    lastmodified: "2025-01-01T18:46:24Z"
+    mac: ENC[AES256_GCM,data:JUKHE9dGFMRG7dpsGyekIpshRx5otGvpYWyEP8a0KSi/2yM5SwMIVtdyMAiiq8x68W9Uq1UCxd+7bxFMZD0NVQe0zjMypb2ywmrgV7cfAD9aZCbSGvqmWCv3SDV8HvbvS1mJyPZd70MriwKXITgVg5axFvXkKmOZsOtWvfAly/8=,iv:k8f2geDNXtOOx65VyteVpQFw2JkVk2McwjgUXWcGypY=,tag:5/qC5sH1CB/Ns0kNCKbzBw==,type:str]
     pgp: []
     version: 3.9.1
