--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,44 +4,44 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:277okJpies30UYde3Rk/Oi96u3ac0VEGs121vT188kL2RKHUozVMLVsDmitKtQKohEZ4ZmLZNHzvCBlIiIxzNsQ=,iv:cldCyARjplDS3x316LYXkNjHu63C5LLnxDZF75I+CPU=,tag:6+52ZjfEJdOFM7IPB7dBDQ==,type:comment]
-    #ENC[AES256_GCM,data:3aWOEI6+7JI7GLTz2Ud+LK17k65Lmi7157NnYNrchq9giCNJO8NZT2V0Dls=,iv:M586GLJoi5SwlEEJtp/9hLh1EUMZn2NxoPv6PplAgiM=,tag:pyhXryDYR7P1tcUHEwwHuQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:5ELn2iQBT9K/CN1UwA==,iv:4dCTiJ8DY8nWbh80+4ApduDyG7J3VLK9suMfxpCIUiU=,tag:OiZp+NBVY7H7t4v1v3khAA==,type:str]
-    #ENC[AES256_GCM,data:D6gYNLumn4k6qE20si8PUG9LTnPW8U6kwFJv,iv:f0OmDY91WhVqORYIQRAAgfef+gAH2eDh5ETokUl/Hhs=,tag:bsSqceIah4vy+p2/Fx+74Q==,type:comment]
-    #ENC[AES256_GCM,data:z7Gi8w0bPOJ3WVlNwQFtD+L+YBva1H6ChezHRGYGc/mXZo5S1cDSohhr1MzawyKQMRiVcQ5fEiufVDKGUpW2HLk6zjjsDYLXQgOmqYxgkt7swEySv+7ZdXQ=,iv:rEgrcAjsgoGSHywR1zdulZ8wfffBfvnVPXvYsFfkf50=,tag:4/LL3hS166SxpUKeHknKmw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:6apOmT0316r2U0gcE0g=,iv:TlJp2Ql+RCT723hl26htBAqJdrRAQOVb4dH9uvI5df8=,tag:zRx/lzJH9/j9WHUQPDCxMw==,type:str]
-    #ENC[AES256_GCM,data:W0MeigCW8RFO7YYeQzOvy2gkQK7liwtDf6nrh/dnzMQkTw==,iv:Ae8RluppLtbPRBYgNGdF2GjR+tj/5Cl2BBUU2KQuAZo=,tag:mme08hE1v2VDEc9blxAPRA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:N6goA68znqihZcF7cA==,iv:PBjYou4dpnqWG3xV5kLMU849bfohhiFbnEpUmR+klWo=,tag:gU8Iqh5F1L5bwL+Ej2tZhA==,type:str]
-    #ENC[AES256_GCM,data:R8X+vn0siKRdoZqWeOdP8RrGpYiPEZB2gTMMh5mh/kKF1TCYqeiBQzltcbfAIxo=,iv:7U4Pw15EbaMRbDOjiWsU0SroEyD7oMNqf/c8daYanPk=,tag:YVkvJupG7pr3Db1mM6yhKg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:ZcCII6AdjoR70LYF+PH1nesGUMg84yg9ZnMg6jxrKQ==,iv:gA0+/gY4TfjDcuSY+219Ju8E/wD/ua19oFLVHIsjWLU=,tag:6dpQ9wFU+QuEgtPwH0VrvA==,type:str]
-    #ENC[AES256_GCM,data:4nf5/2KqU0Ny694mlZFSbAgbR7VLpcnFAIVn382C9XK3vCGYkxVnFPpF7fHI+iISn1CeJbBY3rW/EUJCY/R+cbZC2UTb1Z36bxklC0eS67T88w==,iv:6NBUlOjiUvmZRowDyeYna3XfeP4WDOnbCc6apOkrxUU=,tag:jWYbPtST97046d2s7rhvgA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:FeN/nmMEggGqT2XpN46s,iv:QwasSnFZW9800c9CmIHyZu6v/z8HqtiP2+bOjKwtHRY=,tag:WVPVuo7A9Fj99yqUWvL4DA==,type:str]
-    #ENC[AES256_GCM,data:Xdtbb+ZQbgRMMDHNVYaz4cwp7Kj4M9wNOu9e/eVDV2qC,iv:Nk411VAR91cjw/FfxYL2i1wKv+63W6UvAbDIE2WUWps=,tag:nK5M+uWmjBtfD3vC6t7vcQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:KzqGIRSEHzPbI/TCk5SD,iv:ocXHGzACrq67RiGRANroJew43mv6uX8MndaZoLQbKfs=,tag:mEb9ln0+TdrdxefdIsZj9w==,type:str]
-    #ENC[AES256_GCM,data:JZdqzp0dx0kE5XBUH9PvKR2iRlShMX0SrU3kECMpiR/PjvuwWvXgVuoi30yJlbeAts5qZSO5GOUYef3LjHEh5zy9OxE8qKA4XKivzPaRbAI=,iv:8FG/agJ45dnN1U3fIMeTJol1M4B1vmat7Tn5KVuc+eM=,tag:ao9gxqsLp8Dq5kOtMjZ1CQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:6CNzfe8g3tbnep9pgiZ1,iv:oE44v3lHK0zBntwFMCwb+mclorofvvGSo7CmRoPitKE=,tag:psVB2Ljlifr5RgIe3kXMnw==,type:str]
-    #ENC[AES256_GCM,data:5vXQulam51wK5teRReMZt4XbQCqci/G8hnVvalLGcl3EAhnXgZkyrfwDpgx3E0NV4R4J+4oxZfYUyUHS2CTPlEgNNjogQ8tisnVP2hzvtdMjuEOe0nmQ,iv:19HGgD1GHV8A/Pn0wlzfQ/OpuHAYf5Crr5NTkQzL2Os=,tag:P0n/m11YLuMxxo91/cHT4A==,type:comment]
-    #ENC[AES256_GCM,data:X6Rf23pncXgjQR8skgrBu/Kt+p8gl4gfaHMaVoOIUHsyh4kxsHugO7M59lcUYaxJYtiVA1Bm4R1GPSO5Vo/OzzhRiJFLXKGR23IPBgUnHY5vJTutxV59rUjMsKr/BoSFUR6s2G541TJyuJEiYi/CxJC1AUtnUlhr/Yq8eA==,iv:upFeMDu44AfkPu5RYiAwHLThesT58gZrlL8n293ELV0=,tag:RJgroc1psFNe7+7wQfGu5g==,type:comment]
-    #ENC[AES256_GCM,data:kGaYbfxkRG71qcMUT0y6iEZhdfvhp90uSRvsIBcaNDTc5pXpTby1xacGmdHSwMfxLIqgoY1xL92q9iQ1jB7jlHS7jszPzFYXqOX4lJj5TH8=,iv:5cLEnY8q6rRvADBp9YWNPJ9QPhzJ+dnY/EByuNslXqw=,tag:4iJ3dXj5aZqYnTO/j0iEyA==,type:comment]
-    #ENC[AES256_GCM,data:3srguw8OFZUZ/cPUvWaw2Gt/kdpwInVti6VTN3Al9lhdiwamv7qI65D0EBW+b7XDV5gME9b4,iv:XDDV6uBe3fr+UF7i5Vx418aFQNEvOpR/yMX0K9agVKY=,tag:3uuEFf9SnCZO3CDKch2zvg==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:iwgR+qmf8Lw8xwJk9ck=,iv:ZnrFR5HjD+SGLArFfCiS9qA6OnANsurTLY/QtLSEj7E=,tag:WARVln1KbXl6H45aUavZ2A==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:H0XbosobIGLDiG3u,iv:vyA7PQBFc5fS+omXPCoQsySooug0NV4XnFkFQWsVbMU=,tag:MMCV/iziwc43f2QnX33FOg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9b9VLCAskZ75iKd1tyHar9s=,iv:Nn1EMpWHpxCDEEt4B931A8R8GwxE2JXajSqKrdgxeIc=,tag:JNxZnnMUY4WaKy6SdPATrw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:8CpgPjFNydG/f1/nxVl1SpK8Vc/byNSHCnB2wUzfJJg=,iv:pjzNvf0flVaD7gKQGPJG73q+FWwcykewBqrzPFgiD3M=,tag:NyxgnlDprBejGpDBJAnRxQ==,type:str]
-    #ENC[AES256_GCM,data:q2LJYY70EBsQK5tdE4V4cZZkgwhw5MeBz+Qavbq4+EZCQFyRWFka3H7/5/ElGqI6dnZ5I2+U6a/CpM+8AujA2wLArA==,iv:ZHtxe6J4UVx4yg8Jrl75WGPpdGRV/h/VmOohoHmYSco=,tag:LpN3Yh6EkLeSveb8Gr9J6w==,type:comment]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:v7TUN6O8keHK3Jcx9cDCLbt49FmJDwJXsze2gOSdj5ClSMZ5Zg==,iv:erbAUnerKXzQKjA5LE1Jd1A1ycR/MOLEaGBSAFJu8yE=,tag:9mqXelVQna3WNtD9ABy/Rw==,type:str]
-    #ENC[AES256_GCM,data:PpUDiF6mE0pXIyEwDMT9ojvc0pvHE3QWrrEGeancVJC9CO0MLgGGo/p5HgfKcfDd1SL+wdC6xT4=,iv:WnkFy/DnNo5Vc7h1u6xetVrP7VRX1oRA9kKRiDkKuuA=,tag:XQtN/3s61M/B7Kz1f16zvQ==,type:comment]
-    #ENC[AES256_GCM,data:UBeAy7jTgc7gjgx12SphdN/oD5fxlgK4eg==,iv:vuB/B+WJ3gFzyf6DhnU1GKuPPMgeQSplQnKfyhIq+s0=,tag:QggIqIy/ul3Oxp/shXuW2g==,type:comment]
-    #ENC[AES256_GCM,data:4lUZOLQftL5hrLrjhDXQpFEVlN8zZD7oPBokCauikbCVc9bY87seS1G0BEabOIu2eXbrzv9Q28Kka/K7KKXIrQ0XSJTAkuSvYve33M8=,iv:e22LZ60lChfSG4hz8Qssjhk205dFheLUIUbMV6Gt2ww=,tag:j0uJlmrfhncx+FmRqDl4WQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9q4KXzAJLIyhbqDUmudpk35lUkf18RKZ90fmcp7ERtKYjZGaBypkyID/EqCpJmbW,iv:u+zsMpaePEkMhfe3/iZhwzNw9PtLTyGI/FlMtxSWroE=,tag:32cmw0qChz8ReuLz4ua3mA==,type:str]
-    #ENC[AES256_GCM,data:0LjKkP4ZXafuKKulnL47xXBA4FbNL9iXBIzTNnIohomwDethcyIP3PgiiTGEZNej1sujmARTlmV4JfNU+WniXWdResh4XfM=,iv:ywavDOzIqKOiFy5Hq84OgtHHk+KKSMV7ZPkY3kyVMck=,tag:cDKo+AiXF8g3B2QQPmugcQ==,type:comment]
-    #ENC[AES256_GCM,data:ccpwWiUy8FT1x/9kbY+SIh4EXh3Ft6ZQxaxDXuuxUILa2/brSxGkbQJ6XCV6zNW06bfJN/5I,iv:TYyVT+87YzrY2nte5dLBMbnWTis26vV5sI9o6hr8i7U=,tag:sf7aIby9PAYbA2ma+eqU0A==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:aq2GgU3xQg==,iv:T/JTM0Ivbb+oh0P0a7U9uu9cpAVMK5bzN2CcbOpt23M=,tag:TRk1s92Pq8evYoJWDs+3xw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Iq9jorGwgZJ4vwEyh2hB6+Gd1v8=,iv:ybA2zeA7Q875pb2zx39ExiHVO57PNruz9WfzfbDtCGw=,tag:xg4y9elM+JUSktgMq3wAtA==,type:str]
-    #ENC[AES256_GCM,data:NmMptSl3ROMtW3KGBic=,iv:tOblc7/JViBe43DShuGqXuIj+6So9hixsAuyfegsj2w=,tag:7MolqBsnv7FJHYfIkcZpEg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:y5NWwXqM4VJa2g/4cg==,iv:xFjxx65eyfqqkVxlvJA891pKfoQ4BKltH+yDI5Hw1Is=,tag:As1qweP5YFM1SE6bXyzSDQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:S/+X5W3iEZ62bP83sg==,iv:3XdUBV3aUW/x9me9gRMI3rZrUv15jxJ+3o5jCOUwUq8=,tag:4cqq7spyFuGqIX9JH8PupA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:0xeQIQ==,iv:VRJy2xQPZLKysyU+hygJjJT6UebwVrOrCOoe+P4/LHI=,tag:c0t/Mb62oAwgMKSkA/Iy1g==,type:str]
+    #ENC[AES256_GCM,data:KbOOhqVZIwrjfz6VzfE+9vvzIWHIn9+FKKbUJ3iOlR5d9vEAQuL2IWa7So0ZMFMLZpfwxQsGdqwT2PmInmXhDto=,iv:bjLS5j7v5B7kVByTDodDlIo0QvcoZJB4IH4ZscVETak=,tag:EzHn8MsdAIZDBhTRObCawA==,type:comment]
+    #ENC[AES256_GCM,data:3rRSscyPFjcxrVCXRoUuAObxitXbmegZknMuU4Kcq3CSvRZly7RkG/OfYgw=,iv:QhyV6Gbb6sz/S7Lsc1p1Oux6pR2ZI2mYrB9D6iubSsI=,tag:xkX18UqZqdGoFpNeJYFzRA==,type:comment]
+    VIP: ENC[AES256_GCM,data:2ua8+bGiVwnvdv5xag==,iv:EI5E9EDp+82YRytr3J7jkR3lu4Ap+q+hRCstLh/nKyo=,tag:6EnVbGHiyQNW2ZCXSuwDdw==,type:str]
+    #ENC[AES256_GCM,data:2jRoQ4yPwJwZ6qyo+GZamEzFPcDU+wl0hRIU,iv:60x3+N1cFQh5vZQ06StfaMv+7kgY1O4nAmsL+6smlUs=,tag:xX0Jf8INX4ukXZNOL8Qbww==,type:comment]
+    #ENC[AES256_GCM,data:l1i9qz1Inoxxjqd26ZZb3lvWnwsJzRXSuNYhVR+pLpIwAjCYvocSQmGyjHymYIT3ZMVw3cjQ8JefqDit7z6G0aKNqGxKsYmQzms4Egm/3Tvr/10FnGpHbXs=,iv:PfYeNRbGUhABHPAjSzR9yYU5xrVBe3xk2/K/Pi76pfM=,tag:Ls06mxPdDfDoNzgTWat3+A==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:jgqdyD4C6kpOPMyOAD8=,iv:bRc1JzFGkUXtHzpYD9nlRwRscojYni8SsXvjdu3ulK4=,tag:M4uQREusRIA5AkG98Elfwg==,type:str]
+    #ENC[AES256_GCM,data:AbL471hkIA406Aaf0GfACP3UR3UKlea1O4T8DtA16Lf+qQ==,iv:xxwKXwrUJ1xh1Q0FA9EcKAqkfw3x49KfcH3irnsxy9A=,tag:dYD6RgTqryHBZQV5NO9iRw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Twa7YBzDp9nN3WUsJg==,iv:KSanhxwsMZbLQWiwj0ZcAOSfPh1i3rEmU+06j6cZ5Q8=,tag:xAz5sBkxQZXVaDSCl9h0eQ==,type:str]
+    #ENC[AES256_GCM,data:EsLczeiYEzZJhtAZf4ldeohLud82E9laxOJg7dxVszIDzMVP2h7hWUksrMVy1AY=,iv:c+vfkHEToklsW3U5GFQ/6nEEcMMIDoiwdbXJoSt5K68=,tag:CXt9IZB+ZBsfi8w13xahEA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:Yf2lkT+9I3XP0gGNrMOX5o1ZRftdPxeJdGLM8RYQ2w==,iv:0420Mb4Zw/48ggk/NYjvlXykFLVCIYEYHf1iwqS7+ZY=,tag:qfHL5sE5L5W376m1R+fCuQ==,type:str]
+    #ENC[AES256_GCM,data:T/YJ2thxKIQStbBPF8mXaN3Xw2l+9i892NML7O8xrWeJOX224lFTCF8xDwb4PiOqATIPheKN/bmz3P8BxuPtGzrYYHhO/eM0PukrbzTVIce4iQ==,iv:DQ0VHK6WW/e+HLhW6xtWfJE6WmP3eGrbibRidCP1NJk=,tag:KUR+yTu9wQHK6ovVWNayLQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:pf3deBez1eNVekd6SG8I,iv:fiCboY+E0ILmfRHPTgriqqKdTOiA4GcTHJXiM6t7Th0=,tag:icLpX9N9muwSeU0K1GSHDA==,type:str]
+    #ENC[AES256_GCM,data:DTog9OIaLsyaKdCCcgHHthxUJBFf/ZdRMS7S77eAkg3D,iv:TUxOmiJtTlMoRNSuJgn/qG+wWjJMFc5inIP1LTADHqE=,tag:OSkKnriN89zru0Nyhe6tyg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:qj5svNARh3dLOYHMq+dE,iv:/uELy//DKMC6nPpAKpYKzS46B2Ykupw/VbdvINsRHb0=,tag:JSdY+jqFELhm8iq6QwHPjw==,type:str]
+    #ENC[AES256_GCM,data:56eqQXU2Q2LWyDXcZ3DlGEUbXE88MwZlHoSTDNpkAgHlyG4N5Z3x+q8WtATPExL/2mMUQDQxz/XfQevWet4CoSuE8xHDeQbT6CriImHgMNI=,iv:JaykAkv5jWXpLNxU0OlgBfPb0m8G8BBwTTNX+ItCec0=,tag:uxzwl74xI87rislZaqtMrQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:jkVs3j2qQQBBdmHTmQV6,iv:q7HPSNAbko305scbwbcs7WOcrqx7CSNaNBPP+dyU0UY=,tag:0cNN2PIzxIoqZP9XbjfWyA==,type:str]
+    #ENC[AES256_GCM,data:39Xl8GxA03UiKQKI3P+GQnRs7+lUNdfk1Gk4hUHY7cGeft5BYsuoReY75uQsvv3h8xzXypoBHQBpbVrJNLHAiEBrdb7vtatEnDmWanPYvKDTPNXAwgEx,iv:T/jGlo0yQp5PJyvHYxP9PajV5ouzvF81LuvcMQMo3Yk=,tag:QK6Ay9F3xd6UwTIUjQm2MA==,type:comment]
+    #ENC[AES256_GCM,data:4q3bTKalfgz0rtIfM9tk1ctjfG+t4eGZ46MPsfSUUyrc57SnT/venFM4ffWtNYVmVS+/X/M4bECbypw0bwSLc2VCapQSTjTMV0fvijLCJ7MNxBvZOtjoy4JZWQixPRAgNVZ8c7ommwAO63im3xOfy2/4bZbcZzSehh/FAg==,iv:5KXqy7ea2FWXc8VtDvjsoIvSwZVgtSwv/3bHYAOtZq4=,tag:2NK763l8fNY/CPL9A8TYpg==,type:comment]
+    #ENC[AES256_GCM,data:pQOzrzyTxyhhr5a5I/6BGL0kNr9F6cfgslUz5gYeSU9JX7d9Rnj1kOVUatZ8LS7cR2L0LJzZNrDDLpl22YPpAOYNgxWtPpojv5g8vbjMWFM=,iv:OcIgnuheY2OFGRqoQ2CwDK8yd88pOfbVHsRQHzdz93Q=,tag:dKobDFgAFFPouk2171mf6A==,type:comment]
+    #ENC[AES256_GCM,data:HIIovtZZquzpCS5yGpk7DEvaSuDblNjWdnd1XlAmk+eaMDAFFzEAOG6gtyZlhqSgr983+GYr,iv:RdQnGT9zBvJQFYs1JDglOneKmEOq3ICv3R1J8YrhtcE=,tag:via0ZuP8VC1I5wc/jUEsWw==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:YPpY7h4ofADwJEujiKw=,iv:etbRjygY+vYP0lMp4DO/mF2Yvgd2M0bzrVX+ySO3df0=,tag:DA4V9hYDXX899woaX3ToUQ==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:elXdTsEjCkd10ZsF,iv:imlA+SE1l3fooMv5ESVT8ZSaD9vRDY22d2QCXdjYskE=,tag:WePZGYMLUi2X8idB56PLRA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:HPzMS7SBsg4MiYTiAIyeyiA=,iv:+DrwtkveIHkFh3QCgKN3G5frXTly7s79iLxsSbU0Jb0=,tag:Noxx4K9soiGA7LYh+lyiEQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:OIiQi9dVmC2vLiD5dgvsluUl3eaIPyXwZyR7Wp1Hs0A=,iv:aKbLrO5EmvZ3De0sOxykfmnOarwYdSqyu78LeeLwK9k=,tag:V1XpWfrUNhN7l4Lo9Zq66w==,type:str]
+    #ENC[AES256_GCM,data:TaaVSeNABkR555ekBWyC5cD6dPIJULWRQr/EoBU3UlrcgnMZ82PW6LnbFjZPfT7u5vUGn24Lj5yxgLmUpS+Wq0ZPuQ==,iv:0CHiMwjR5/iw1l1jgRbsGzkQXBkBv4dmktZ85wOcxiI=,tag:cjPveJSwNEv82nPsQ9WsXg==,type:comment]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:I/QgKdj66pIzAJng9RMGZUYK/egaM6DMy26vZVxzcZMQiGvSMg==,iv:hPggoL8CViG4YdqDA31QvyyBH4iRdcaM+x8gWaB5T4g=,tag:nv9ET7uQhx/mVEq6M9dtqg==,type:str]
+    #ENC[AES256_GCM,data:n0pKd/cXovLJw198wjLo2+xwuGKD/BuJAMGaT43myMnMWGQ/DKH4LOUxWWJXIfJa3NaW/bbL9D4=,iv:XitRfsG6VOf0WkB8ikRhCL+sCBTfO4C/8gXUP/zwgyc=,tag:wVciWwoC7uQiT34Widoj2w==,type:comment]
+    #ENC[AES256_GCM,data:bFQEV12wBi8SyjbHoaUfxlkuyqIWpdVW/g==,iv:gWGb38Kinm2YaaIA8cNyxqBB3qxVfzLslKS4vAG1Qik=,tag:/KbGYjCj2rv1NG+/j025kw==,type:comment]
+    #ENC[AES256_GCM,data:aqpv05ieKzjO7OeSq1lrNEM8UdC1NrnYxF0lnIy9NVhlHPrfb6C2FHVJ1491LTm9nZBfRbPpCp/QYE4hpuOdhDCXsXfttJRZdNtTV1Q=,iv:IN5hH7in3Y5DCvzve+/LH/wDKi+eF6TtLg6XtdgF+t4=,tag:OkR/vQGQLWqLeVkWzgs4MA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:sNYhueJM162cah0dyV6PRdh+OZBOCWE+Q/LzN+qYKbmZo5BYThvnj5Msn4KzrNDL,iv:RE4uWTXv8GDeenQOgA/2c4yfcc/tKlpNmxlNpEUDyNo=,tag:nNmwwmALxKti6jvLFxC8Uw==,type:str]
+    #ENC[AES256_GCM,data:H8K1PdznBjpTr4sOB+vZ/B8THSwZ392dtzNa1gOcy9Nuy/IcyCuPhGs9r9HAaeH7lKMXZwq34UenzmTsHKccFsiz9lykTJU=,iv:q/8MwyrE1p/SmC2XwKqXbwkYgLYKOhBAK/gE54+pmp0=,tag:8kKjnrbxcvK94NH5OYXN0w==,type:comment]
+    #ENC[AES256_GCM,data:LJkmHugsHSCr/aaEfFeTvDdldhoh7ZrTfmk5Pd9PPnC361y8fZuyaDQFUqqdu6zUOi3dHX7E,iv:hoXr4aXvDSFAE+Aed625i16OVMzLI+qkRUsu9bq4CQY=,tag:uaD1ajltH8GBBo+wFmjhdA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:iw5qDRp38g==,iv:HW639cM77miIsceEei/nDkrjsy6wmmr8aCdD/zGcBs8=,tag:6hEfBIDiQSxodJJPY2ay7w==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:tRMV8lZqRvMgFQmlgXpnUDS8YqM=,iv:L5bRhUFOqOGdQJweW4jRdw4nGWQWj7FkW4gkwsd7iYo=,tag:Zb1lM5mhWR0Mh2bg4s4XFg==,type:str]
+    #ENC[AES256_GCM,data:cUuheEACSQogyqraO9g=,iv:VOorO6cjvp+GjsS+NxQ2kezvr4Yf8SUzu2VvxYUlySQ=,tag:1X3X9IqZTmhmq7BmWiZ2vA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:QIsScwbsMDLHrUEbsw==,iv:QjvufFf/4krg6eH1odmO9nw1UHF3hcRlM4cimjBF56U=,tag:s5lgWVDYiX6rm6twhd3q4Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ySnNP7CKbzZpxRcpyg==,iv:bD18TWh8BiycnvSTwMmwaVEQ/RBSucMiPBqkvEBAu9o=,tag:2Ee9h2b4bBrOrNEfHOMIsw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:q7FWBQ==,iv:ylBq9fKfjN8D+eacgc5ecoFNMtDTtgyu2yx0oquA1vQ=,tag:eeR/kQ738M0uE+GDFNOO8A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -52,14 +52,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzMjl0N2RkTGNBNFlMNTdX
-            MXhnaDlRZjRVR01Va0VycU03aWFLb0o3QmxZCmYvYmVXTTlOWnRPYzFHVDhOWVoz
-            TVZIbEUyZVVXdGtjU0ZmRDBiQXN2bkkKLS0tIFJtaG4wb3podTFlN0c0UnlBSlNn
-            WkFDaUc0eUNJOWZFUjJPMk1iSE1tQVkKa/p/irn6tepGij2eYv+nRccXbKW+EaCw
-            ep9Z2jhgdZLg61c0UUCWAxP6QCwRP5iK6F6lcFsedJjQyu59cT+9lA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlazlaNlowYmVEaUh1VE92
+            cXZVQ0tiOS9nL2QwdWF6amRMb0dGa3d4ajNjClUzQ3lVV0IxZGVCM1ZoTmFTNTRp
+            b0ZOTmZXclRoamtEa0JHVUNVckQ1WFUKLS0tIDFNdGdkbXFkODNTQ0tLUThobVZw
+            Q0JvMkVxVm1MUlhMOE11clg4ZERXYWsK9aKFReJpNBmwa+jHlKUJbzzMbCPvbNJA
+            V1OLJz8PeaHvZuIsw42iIdHjLvcKDifAxBXur2Xr0zJ3yEhmAHgnzQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:39:26Z"
-    mac: ENC[AES256_GCM,data:yqfDxP5CoLA0VqsSERuW4M89ROT+dLHqClZM+U6kSyd50gVVkx568oRV9fqm7eAFvaNmO2GKRCzcuDExl3YY0pGBMME2O0+r07MIhEPmxHzGuCIhN7SfM2pI9i53bvLG45XgT2tPWfrHGJ22KG1IDI9oBBWqG3yuPpzdzITHR/Q=,iv:VhLpH+awM1siQed6akOSDf4Zmdh3oL2CPdWY0xFcf7M=,tag:qc1HjPwgq1yEDR8QR3LfMw==,type:str]
+    lastmodified: "2025-01-01T18:46:24Z"
+    mac: ENC[AES256_GCM,data:c7XTwc9KpOwVg4Odnti0py+uXmwUs2JJGcP25DfXPpY9UvVHkvnTXIfbRIFJrT+v7kL9CO8nA50WPGGv9gW2Op3hnKKUR0nsEtt90FLgURT2Bh/rrrCS0gjt7VYZPHWArWItMPH6EEojekhUj4OMzeKHjES6kFN+JFGM/5eGGAU=,iv:JZuK/WVae8KrQgzPfTbiKrXH7Y/8BVAMbv89ouFF94o=,tag:eYinOw4AqeKlXn+5L6MigA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
